test/fixtures/typecheck/fail/UnknownDataType.lam
module UnknownDataType

fromMaybe : Maybe a -> a -> a
fromMaybe (Just x) _ = x
fromMaybe _ y = y
